--- a/app.json
+++ b/app.json
@@ -42,7 +42,13 @@
             "path": "app.js",
             "bundle": true,  /* Indicates that all class dependencies are concatenated into this file when build */
             "update": "delta"
-        }
+        },
+		{
+            "path": "app/lib/adnat.js"
+		},
+		{
+            "path": "app/lib/util.js"
+		},
     ],
 
     /**
