baseline score configs for real scoring

--- a/app/data/scoreconfigs.json
+++ b/app/data/scoreconfigs.json
@@ -1,12 +1,47 @@
 {
-"total": 1,
+"total": 38,
 "scoreconfigs":[
-{"q":1, "area":"PS", "avals":[0,1,2],},
-{"q":2, "area":"PS", "tally":1, "avals":[0,1,2],},
-{"q":3, "avals":[2,2,1,1,0,0],},
-{"q":4, "avals":[0,2,2,1,0,1,2],},
-{"q":5, "scoreType":"MultiQ",},
-{"q":6, "scoreType":"Complex1",},
-	
+{"q": 16, "avals":[],},
+{"q": 22, "avals":[],},
+{"q": 34, "avals":[],},
+{"q": 35, "avals":[],},
+{"q": 41, "avals":[],},
+{"q": 45, "avals":[],},
+{"q": 50, "avals":[],},
+{"q": 53, "avals":[],},
+{"q": 76, "avals":[],},
+{"q":111, "avals":[],},
+{"q":112, "avals":[],},
+{"q": 18, "avals":[],},
+{"q": 21, "avals":[],},
+{"q": 38, "avals":[],},
+{"q": 51, "avals":[],},
+{"q": 80, "avals":[],},
+{"q": 92, "avals":[],},
+
+{"q": 57, "scoreType":"MultiQ",},
+{"q": 62, "scoreType":"MultiQ",},
+{"q": 66, "scoreType":"MultiQ",},
+{"q": 71, "scoreType":"MultiQ",},
+
+{"q": 94, "scoreType":"Complex1",},
+
+{"q": 10, "area":"PS", "avals":[0,1,2],},
+{"q": 11, "area":"PS", "avals":[0,1,2],},
+{"q": 20, "area":"PS", "avals":[0,1,2],},
+{"q": 29, "area":"PS", "avals":[0,1,2],},
+{"q": 49, "area":"PS", "avals":[0,1,2],},
+{"q": 56, "area":"PS", "avals":[0,1,2],},
+{"q": 78, "area":"PS", "avals":[0,1,2],},
+{"q": 91, "area":"PS", "avals":[0,1,2],},
+
+{"q":117, "area":"PS", "tally":1, "avals":[0,1,2],},
+{"q": 19, "area":"PS", "tally":1, "avals":[0,1,2],},
+{"q": 28, "area":"PS", "tally":1, "avals":[0,1,2],},
+{"q": 48, "area":"PS", "tally":1, "avals":[0,1,2],},
+{"q": 55, "area":"PS", "tally":1, "avals":[0,1,2],},
+{"q": 77, "area":"PS", "tally":1, "avals":[0,1,2],},
+{"q": 90, "area":"PS", "tally":1, "avals":[0,1,2],},
+{"q":113, "area":"PS", "tally":1, "avals":[0,1,2],},
 ],
 }
