Scoring rules working adding data for each question

--- a/app/data/scoreconfigs.json
+++ b/app/data/scoreconfigs.json
@@ -1,23 +1,23 @@
 {
 "total": 38,
 "scoreconfigs":[
-{"q": 16, "avals":[],},
-{"q": 22, "avals":[],},
-{"q": 34, "avals":[],},
-{"q": 35, "avals":[],},
-{"q": 41, "avals":[],},
-{"q": 45, "avals":[],},
-{"q": 50, "avals":[],},
-{"q": 53, "avals":[],},
-{"q": 76, "avals":[],},
-{"q":111, "avals":[],},
-{"q":112, "avals":[],},
-{"q": 18, "avals":[],},
-{"q": 21, "avals":[],},
-{"q": 38, "avals":[],},
-{"q": 51, "avals":[],},
-{"q": 80, "avals":[],},
-{"q": 92, "avals":[],},
+{"q": 16, "avals":[2,2,1,1,0,0],},
+{"q": 18, "avals":[0,0,2,2,2,0,1,1,2,1,2],},
+{"q": 22, "avals":[0,0,2,2,2,0,1,1,2,1,2],},
+{"q": 34, "avals":[0],},
+{"q": 35, "avals":[0],},
+{"q": 41, "avals":[0],},
+{"q": 45, "avals":[0],},
+{"q": 50, "avals":[0],},
+{"q": 53, "avals":[0],},
+{"q": 76, "avals":[0],},
+{"q":111, "avals":[0],},
+{"q":112, "avals":[0],},
+{"q": 21, "avals":[0],},
+{"q": 38, "avals":[0],},
+{"q": 51, "avals":[0],},
+{"q": 80, "avals":[0],},
+{"q": 92, "avals":[0],},
 
 {"q": 57, "scoreType":"MultiQ",},
 {"q": 62, "scoreType":"MultiQ",},
