Building in test mode (fail on css)

--- a/app.json
+++ b/app.json
@@ -105,7 +105,8 @@
     "resources": [
         "resources/images",
         "resources/icons",
-        "resources/startup"
+        "resources/startup",
+        "resources/data",
     ],
 
     /**
