--- a/app.json
+++ b/app.json
@@ -119,7 +119,7 @@
         "resources/images",
         "resources/icons",
         "resources/startup",
-        "resources/data",
+        "resources/data"
     ],
 
     /**
@@ -127,7 +127,7 @@
      */
     "ignore": [
         "\.svn$",
-		"\.git$",
+		"\.git$"
     ],
 
     /**
