--- a/app.json
+++ b/app.json
@@ -41,24 +41,24 @@
         {
             "path": "app.js",
             "bundle": true,  /* Indicates that all class dependencies are concatenated into this file when build */
-            "update": "delta"
+            "update": "full"
         },
 		{
             "path": "app/lib/score.js",
             "bundle": false,  /* Indicates that all class dependencies are concatenated into this file when build */
-            "update": "delta",
+            "update": "full",
 			"remote": false
 		},
 		{
             "path": "app/lib/util.js",
             "bundle": false,  /* Indicates that all class dependencies are concatenated into this file when build */
-            "update": "delta",
+            "update": "full",
 			"remote": false
 		},
 		{
             "path": "app/lib/question.js",
             "bundle": false,  /* Indicates that all class dependencies are concatenated into this file when build */
-            "update": "delta",
+            "update": "full",
 			"remote": false
 		}
     ],
@@ -95,10 +95,67 @@
      */
     "appCache": {
         /**
-         * List of items in the CACHE MANIFEST section
+         * List of items in the CACHE MANIFEST section 
+		 * "resources/icons/Icon@2x.png",
+			"resources/icons/Icon~ipad.png",
+			"resources/icons/Icon~ipad@2x.png",
+			"resources/icons/iTunesArtwork.png",
+			"resources/loading/Default-Landscape@2x~ipad.png",
+			"resources/loading/Default-LandscapeLeft~ipad.png",
+			"resources/loading/Default-LandscapeRight~ipad.png",
+			"resources/loading/Default-Landscape~ipad.png",
+			"resources/loading/Default-Portrait@2x~ipad.png",
+			"resources/loading/Default-PortraitUpsideDown~ipad.png",
+			"resources/loading/Default-Portrait~ipad.png",
+			"resources/loading/Default@2x.png",
+			"resources/loading/Default~ipad.png",
+			"resources/icons/icon-spot~ipad.png	",
+			"resources/images/Traffic-light-icon.png",
+			"resources/images/tl-all.png",
+			"resources/images/tl-green.png",
+			"resources/images/tl-yellow.png",
+			"resources/images/tl-license.png",
+			"resources/images/tl-none.png",
+			"resources/images/amber.gif",
+			"resources/images/adnatpic2.png",
+			"resources/images/green.gif",
+			"resources/images/pgblue.png",
+			"resources/images/adnatpic1.png",
+			"resources/images/adnatpic3.png",
+			"resources/images/adnatpic4.1.png",
+			"resources/images/pggray.png",
+			"resources/images/adnatpic4.png",
+			"resources/images/pggreen.png",
+			"resources/images/adnatpic5.png",
+			"resources/images/red.gif",
+			"resources/images/yellow.gif",
+			"resources/images/adnatpic6.png",
+			"resources/images/splash.graffle",
+			"resources/images/adnatpic7.png",
+			"resources/images/splash.png",
+			"resources/loading/Default.png",
+			"resources/startup/1496x2048.png",
+			"resources/startup/1536x2008.png",
+			"resources/startup/320x460.jpg",
+			"resources/startup/640x920.png",
+			"resources/startup/748x1024.png",
+			"resources/startup/768x1004.png"
+			"resources/images/all.gif",
          */
+            /*
+			"index.html",
+			"app.js",
+			"app/lib/question.js",
+			"app/lib/score.js",
+			"app/lib/util.js",
+			"resources/css/adnat.css",
+			"resources/css/app.css",
+			"resources/data/questions.json",
+			"resources/data/scoreconfigs.json",
+			"resources/icons/Icon.png",
+			*/
         "cache": [
-            "index.html"
+			"index.html"
         ],
         /**
          * List of items in the NETWORK section
@@ -116,6 +173,7 @@
      * Extra resources to be copied along when build
      */
     "resources": [
+        ".htaccess",
         "resources/images",
         "resources/icons",
         "resources/startup",
