--- a/local.properties
+++ b/local.properties
@@ -1,7 +1,8 @@
-skip.sass=true
+#skip.sass
+#skip.sass=true
 
 version.name=ADNAT
 major.version=1
 minor.version=0
-build.version=0
+build.version=3
 
