Cleanup settings and add more utils

--- a/app.json
+++ b/app.json
@@ -1,228 +1,223 @@
 {
-    /**
-     * The application's namespace, used by Sencha Command to generate classes
-     */
-    "name": "adnat",
-
-    /**
-     * The file path to this application's front HTML document, relative to this app.json file
-     */
-    "indexHtmlPath": "index.html",
-
-    /**
-     * The absolute URL to this application in development environment, i.e: the URL to run this application
-     * on your web browser during development, e.g: "http://localhost/myapp/index.html".
-     *
-     * This value is needed when build to resolve your application's dependencies if it requires server-side resources
-     * that are not accessible via file system protocol.
-     */
-    "url": null,
-
-    /**
-     * List of all JavaScript assets in the right execution order.
-     * Each item is an object with the following format:
-     *      {
-     *          "path": "path/to/script.js" // Path to file, if local file it must be relative to this app.json file
-     *          "remote": true              // (Optional)
-     *                                      // - Defaults to undefined (falsey) to signal a local file which will be copied
-     *                                      // - Specify true if this file is a remote file which will not to be copied
-     *          "update": "delta"           // (Optional)
-     *                                      //  - If not specified, this file will only be loaded once, and
-     *                                      //    cached inside localStorage until this value is changed.
-     *                                      //  - "delta" to enable over-the-air delta update for this file
-     *                                      //  - "full" means full update will be made when this file changes
-     *
-     *      }
-     */
-    "js": [
-        {
-            "path": "touch/sencha-touch.js"
-        },
-        {
-            "path": "app.js",
-			"bundle": true,  
-            "update": "full"
-        },
-		{
-            "path": "app/lib/score.js",
-			"bundle": false,  
-            "update": "full",
-			"remote": true
-		},
-		{
-            "path": "app/lib/util.js",
-			"bundle": false,  
-            "update": "full",
-			"remote": true
-		},
-		{
-            "path": "app/lib/assessment.js",
-			"bundle": false,  
-            "update": "full",
-			"remote": true
-		},
-		{
-            "path": "app/lib/question.js",
-			"bundle": false,  
-            "update": "full",
-			"remote": true
-		}
-    ],
-
-    /**
-     * List of all CSS assets in the right inclusion order.
-     * Each item is an object with the following format:
-     *      {
-     *          "path": "path/to/item.css" // Path to file, if local file it must be relative to this app.json file
-     *          "remote": true             // (Optional)
-     *                                     // - Defaults to undefined (falsey) to signal a local file which will be copied
-     *                                     // - Specify true if this file is a remote file which will not to be copied
-     *          "update": "delta"          // (Optional)
-     *                                     //  - If not specified, this file will only be loaded once, and
-     *                                     //    cached inside localStorage until this value is changed to either one below
-     *                                     //  - "delta" to enable over-the-air delta update for this file
-     *                                     //  - "full" means full update will be made when this file changes
-     *
-     *      }
-     */
-    "css": [
-        {
-            "path": "resources/css/app.css",
-            "update": "delta"
-        },
-        {
-            "path": "resources/css/adnat.css",
-            "update": "delta"
-        }
-    ],
-
-    /**
-     * Used to automatically generate cache.manifest (HTML 5 application cache manifest) file when you build
-     */
-    "appCache": {
+/**
+        * The application's namespace, used by Sencha Command to generate classes
+        */
+        "name": "adnat",
         /**
-         * List of items in the CACHE MANIFEST section 
-		 * "resources/icons/Icon@2x.png",
-			"resources/icons/Icon~ipad.png",
-			"resources/icons/Icon~ipad@2x.png",
-			"resources/icons/iTunesArtwork.png",
-			"resources/loading/Default-Landscape@2x~ipad.png",
-			"resources/loading/Default-LandscapeLeft~ipad.png",
-			"resources/loading/Default-LandscapeRight~ipad.png",
-			"resources/loading/Default-Landscape~ipad.png",
-			"resources/loading/Default-Portrait@2x~ipad.png",
-			"resources/loading/Default-PortraitUpsideDown~ipad.png",
-			"resources/loading/Default-Portrait~ipad.png",
-			"resources/loading/Default@2x.png",
-			"resources/loading/Default~ipad.png",
-			"resources/icons/icon-spot~ipad.png	",
-			"resources/images/Traffic-light-icon.png",
-			"resources/images/tl-all.png",
-			"resources/images/tl-green.png",
-			"resources/images/tl-yellow.png",
-			"resources/images/tl-license.png",
-			"resources/images/tl-none.png",
-			"resources/images/amber.gif",
-			"resources/images/adnatpic2.png",
-			"resources/images/green.gif",
-			"resources/images/pgblue.png",
-			"resources/images/adnatpic1.png",
-			"resources/images/adnatpic3.png",
-			"resources/images/adnatpic4.1.png",
-			"resources/images/pggray.png",
-			"resources/images/adnatpic4.png",
-			"resources/images/pggreen.png",
-			"resources/images/adnatpic5.png",
-			"resources/images/red.gif",
-			"resources/images/yellow.gif",
-			"resources/images/adnatpic6.png",
-			"resources/images/splash.graffle",
-			"resources/images/adnatpic7.png",
-			"resources/images/splash.png",
-			"resources/loading/Default.png",
-			"resources/startup/1496x2048.png",
-			"resources/startup/1536x2008.png",
-			"resources/startup/320x460.jpg",
-			"resources/startup/640x920.png",
-			"resources/startup/748x1024.png",
-			"resources/startup/768x1004.png"
-			"resources/images/all.gif",
-         */
-            /*
-			"index.html",
-			"app.js",
-			"app/lib/question.js",
-			"app/lib/score.js",
-			"app/lib/util.js",
-			"resources/css/adnat.css",
-			"resources/css/app.css",
-			"resources/data/questions.json",
-			"resources/data/scoreconfigs.json",
-			"resources/icons/Icon.png",
-			*/
+        * The file path to this application's front HTML document, relative to this app.json file
+        */
+        "indexHtmlPath": "index.html",
+        /**
+        * The absolute URL to this application in development environment, i.e: the URL to run this application
+        * on your web browser during development, e.g: "http://localhost/myapp/index.html".
+        *
+        * This value is needed when build to resolve your application's dependencies if it requires server - side resources
+        * that are not accessible via file system protocol.
+        */
+        "url": null,
+        /**
+        * List of all JavaScript assets in the right execution order.
+        * Each item is an object with the following format:
+        *      {
+*          "path": "path/to/script.js" // Path to file, if local file it must be relative to this app.json file
+        *          "remote": true              // (Optional)
+        *                                      // - Defaults to undefined (falsey) to signal a local file which will be copied
+        *                                      // - Specify true if this file is a remote file which will not to be copied
+        *          "update": "delta"           // (Optional)
+        *                                      // - If not specified, this file will only be loaded once, and
+        *                                      //    cached inside localStorage until this value is changed.
+        *                                      // - "delta" to enable over - the - air delta update for this file
+        *                                      // - "full" means full update will be made when this file changes
+        *
+        *      }
+*/
+        "js": [
+{
+"path": "touch/sencha-touch.js"
+},
+{
+"path": "app.js",
+        "bundle": true,
+        "update": "full"
+},
+{
+"path": "app/lib/score.js",
+        "bundle": false,
+        "update": "full",
+        "remote": true
+},
+{
+"path": "app/lib/util.js",
+        "bundle": false,
+        "update": "full",
+        "remote": true
+},
+{
+"path": "app/lib/assessment.js",
+        "bundle": false,
+        "update": "full",
+        "remote": true
+},
+{
+"path": "app/lib/settings.js",
+        "bundle": false,
+        "update": "full",
+        "remote": true
+},
+{
+"path": "app/lib/question.js",
+        "bundle": false,
+        "update": "full",
+        "remote": true
+}
+],
+        /**
+        * List of all CSS assets in the right inclusion order.
+        * Each item is an object with the following format:
+        *      {
+*          "path": "path/to/item.css" // Path to file, if local file it must be relative to this app.json file
+        *          "remote": true             // (Optional)
+        *                                     // - Defaults to undefined (falsey) to signal a local file which will be copied
+        *                                     // - Specify true if this file is a remote file which will not to be copied
+        *          "update": "delta"          // (Optional)
+        *                                     // - If not specified, this file will only be loaded once, and
+        *                                     //    cached inside localStorage until this value is changed to either one below
+        *                                     // - "delta" to enable over - the - air delta update for this file
+        *                                     // - "full" means full update will be made when this file changes
+        *
+        *      }
+*/
+        "css": [
+{
+"path": "resources/css/app.css",
+        "update": "delta"
+},
+{
+"path": "resources/css/adnat.css",
+        "update": "delta"
+}
+],
+        /**
+        * Used to automatically generate cache.manifest (HTML 5 application cache manifest) file when you build
+        */
+        "appCache": {
+/**
+        * List of items in the CACHE MANIFEST section
+        * "resources/icons/Icon@2x.png",
+        "resources/icons/Icon~ipad.png",
+        "resources/icons/Icon~ipad@2x.png",
+        "resources/icons/iTunesArtwork.png",
+        "resources/loading/Default-Landscape@2x~ipad.png",
+        "resources/loading/Default-LandscapeLeft~ipad.png",
+        "resources/loading/Default-LandscapeRight~ipad.png",
+        "resources/loading/Default-Landscape~ipad.png",
+        "resources/loading/Default-Portrait@2x~ipad.png",
+        "resources/loading/Default-PortraitUpsideDown~ipad.png",
+        "resources/loading/Default-Portrait~ipad.png",
+        "resources/loading/Default@2x.png",
+        "resources/loading/Default~ipad.png",
+        "resources/icons/icon-spot~ipad.png	",
+        "resources/images/Traffic-light-icon.png",
+        "resources/images/tl-all.png",
+        "resources/images/tl-green.png",
+        "resources/images/tl-yellow.png",
+        "resources/images/tl-license.png",
+        "resources/images/tl-none.png",
+        "resources/images/amber.gif",
+        "resources/images/adnatpic2.png",
+        "resources/images/green.gif",
+        "resources/images/pgblue.png",
+        "resources/images/adnatpic1.png",
+        "resources/images/adnatpic3.png",
+        "resources/images/adnatpic4.1.png",
+        "resources/images/pggray.png",
+        "resources/images/adnatpic4.png",
+        "resources/images/pggreen.png",
+        "resources/images/adnatpic5.png",
+        "resources/images/red.gif",
+        "resources/images/yellow.gif",
+        "resources/images/adnatpic6.png",
+        "resources/images/splash.graffle",
+        "resources/images/adnatpic7.png",
+        "resources/images/splash.png",
+        "resources/loading/Default.png",
+        "resources/startup/1496x2048.png",
+        "resources/startup/1536x2008.png",
+        "resources/startup/320x460.jpg",
+        "resources/startup/640x920.png",
+        "resources/startup/748x1024.png",
+        "resources/startup/768x1004.png"
+        "resources/images/all.gif",
+        */
+        /*
+        "index.html",
+        "app.js",
+        "app/lib/question.js",
+        "app/lib/score.js",
+        "app/lib/util.js",
+        "resources/css/adnat.css",
+        "resources/css/app.css",
+        "resources/data/questions.json",
+        "resources/data/scoreconfigs.json",
+        "resources/icons/Icon.png",
+        */
         "cache": [
-        ],
+],
         /**
-         * List of items in the NETWORK section
-         */
+        * List of items in the NETWORK section
+        */
         "network": [
-            "*"
-        ],
+        "*"
+],
         /**
-         * List of items in the FALLBACK section
-         */
+        * List of items in the FALLBACK section
+        */
         "fallback": []
-    },
-
-    /**
-     * Extra resources to be copied along when build
-     */
-    "resources": [
+},
+        /**
+        * Extra resources to be copied along when build
+        */
+        "resources": [
         ".htaccess",
         "app/lib",
         "resources/images",
         "resources/icons",
         "resources/startup",
         "resources/data"
-    ],
-
-    /**
-     * File / directory name matchers to ignore when copying to the builds, must be valid regular expressions
-     */
-    "ignore": [
+],
+        /**
+        * File / directory name matchers to ignore when copying to the builds, must be valid regular expressions
+        */
+        "ignore": [
         "\.svn$",
-		"\.git$"
-    ],
-
-    /**
-     * Directory path to store all previous production builds. Note that the content generated inside this directory
-     * must be kept intact for proper generation of deltas between updates
-     */
-    "archivePath": "archive",
-
-    /**
-     * Default paths to build this application to for each environment
-     */
-    "buildPaths": {
-        "testing": "build/testing",
+        "\.git$"
+],
+        /**
+        * Directory path to store all previous production builds. Note that the content generated inside this directory
+        * must be kept intact for proper generation of deltas between updates
+        */
+        "archivePath": "archive",
+        /**
+        * Default paths to build this application to for each environment
+        */
+        "buildPaths": {
+"testing": "build/testing",
         "production": "build/production",
         "package": "build/package",
         "native": "build/native"
-    },
-
-    /**
-     * Build options
-     */
-    "buildOptions": {
-        "product": "touch",
+},
+        /**
+        * Build options
+        */
+        "buildOptions": {
+"product": "touch",
         "minVersion": 3,
         "debug": true,
         "logger": true
-    },
-
-    /**
-     * Uniquely generated id for this application, used as prefix for localStorage keys.
-     * Normally you should never change this value.
-     */
-    "id": "53e9afda-b0c8-40c3-bf2a-8089ca23636a"
-}
+},
+        /**
+        * Uniquely generated id for this application, used as prefix for localStorage keys.
+        * Normally you should never change this value.
+        */
+        "id": "53e9afda-b0c8-40c3-bf2a-8089ca23636a"
+        }
