--- a/.sencha/app/sencha.cfg
+++ b/.sencha/app/sencha.cfg
@@ -1,3 +1,11 @@
+#Sat, 23 Mar 2013 10:22:49 -0500
 app.name=adnat
+
 app.framework=touch
+
 app.classpath=${app.dir}/app.js,${app.dir}/app
+
+app.build.dir=${workspace.build.dir}/${app.name}
+
+app.cmd.version=3.1.0.256
+app.id=edc6a7aa-d098-410a-8e7c-a53d1d6b13a8
