question.json into app-cache, cleaned up masks, cleaned up reloading, cleaned up cached files list

--- a/app.json
+++ b/app.json
@@ -60,40 +60,24 @@
     "appCache": {
         "cache": [
             "index.html",
-            "resources/images/pggray.png",
-            "resources/images/pgblue.png",
-            "resources/images/tl-none.png",
-            "resources/images/tl-green.png",
-            "resources/images/tl-yellow.png",
-            "resources/images/tl-red.png",
             "resources/data/scoreconfigs.json",
-            "resources/images/adnatpic3.png",
-            "resources/images/adnatpic4.1.png",
-            "resources/images/adnatpic4.png",
+            "resources/data/questions.json",
             "app/lib/score.js",
             "app/lib/util.js",
             "app/lib/assessment.js",
             "app/lib/settings.js",
             "app/lib/question.js",
             "app/lib/add2home.js",
-            "resources/startup/1496x2048.png",
-            "resources/startup/320x460.jpg",
-            "resources/startup/748x1024.png",
-            "resources/startup/1536x2008.png",
-            "resources/startup/640x920.png",
-            "resources/startup/768x1004.png",
-            "apple-touch-icon-114x114-precomposed.png",
-            "apple-touch-icon-144x144-precomposed.png",
-            "apple-touch-icon-57x57-precomposed.png",
-            "apple-touch-icon-72x72-precomposed.png",
-            "apple-touch-icon.png",
-            "resources/icons/Icon~ipad@2x.png",
-            "resources/icons/Icon.png",
-            "resources/icons/Icon@2x.png",
-            "resources/icons/Icon~ipad.png",
-            "resources/icons/Icon~ipad@2x.png",
-            "resources/icons/iTunesArtwork.png",
-            "resources/icons/icon-spot~ipad.png"
+            "resources/images/pggray.png",
+            "resources/images/pgblue.png",
+            "resources/images/pgblue.png",
+            "resources/images/tl-none.png",
+            "resources/images/tl-green.png",
+            "resources/images/tl-yellow.png",
+            "resources/images/tl-red.png",
+            "resources/images/adnatpic3.png",
+            "resources/images/adnatpic4.1.png",
+            "resources/images/adnatpic4.png"
         ],
         "network": [
             "*"
